@@ -50,7 +50,42 @@ namespace Castle.MonoRail.Framework.Internal
 
 		#endregion
 
-		public RescueDescriptor[] CollectRescues(MemberInfo memberInfo)
+		public RescueDescriptor[] CollectRescues(Type type)
+		{
+			if (logger.IsDebugEnabled)
+			{
+				logger.DebugFormat("Collecting rescue information for {0}", type.Name);
+			}
+
+			ArrayList descriptors = new ArrayList();
+
+			while(type != typeof(Controller))
+			{
+				object[] attributes = type.GetCustomAttributes(typeof(IRescueDescriptorBuilder), false);
+				
+				foreach(IRescueDescriptorBuilder builder in attributes)
+				{
+					RescueDescriptor[] descs = builder.BuildRescueDescriptors();
+
+					if (logger.IsDebugEnabled)
+					{
+						foreach(RescueDescriptor desc in descs)
+						{
+							logger.DebugFormat("Collected rescue with view name {0} for exception type {1}",
+											   desc.ViewName, desc.ExceptionType);
+						}
+					}
+
+					descriptors.AddRange(descs);
+				}
+
+				type = type.BaseType;
+			}
+
+			return (RescueDescriptor[]) descriptors.ToArray(typeof(RescueDescriptor));
+		}
+
+		public RescueDescriptor[] CollectRescues(MethodInfo memberInfo)
 		{
 			if (logger.IsDebugEnabled)
 			{
